--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Mabee Tour</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-    <script src="TemplateData/UnityProgress.js"></script>
-    <script src="Build/UnityLoader.js"></script>
-    <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/mbb_tour.json", {onProgress: UnityProgress});
-    </script>
-  </head>
-  <body>
-    <div class="webgl-content">
-      <div id="unityContainer" style="width: 960px; height: 600px"></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">Mabee Tour</div>
-      </div>
-    </div>
-  </body>
-</html>
+ <html lang="en-us">
+   <head>
+     <meta charset="utf-8">
+     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+     <title> Unity WebGL Player | Mabee Tour </title>
+     <link rel="shortcut icon" href="TemplateData/favicon.ico">
+     
+     <style>
+     html {
+         overflow: hidden;
+     }
+ 
+     #gameContainer {
+         height: 100%;
+         width: 100%;
+     }
+     </style>
+ 
+     <link rel="stylesheet" href="TemplateData/style.css">
+     <script src="TemplateData/UnityProgress.js"></script>  
+     <script src="Build/UnityLoader.js"></script>
+ 
+     <script>
+       var gameInstance = UnityLoader.instantiate("mbb_tour", "Build/Builds.json", {onProgress: UnityProgress});
+     </script>
+     
+   </head>
+   <body>
+     <div class="webgl-content">
+       <div id="mbb_tour"></div>
+     </div>
+   </body>
+ </html>
